# tiltr

./: CITATION.cff  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
tiltr/: __init__.py  fetch.py  plotter.py
tiltr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
