[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiltr"
version = "0.1.0"
description = "Fetch TEPCat data and plot obliquity"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "matplotlib>=3.0",
]

[tool.setuptools.packages.find]
include = ["tiltr*"]
